--- a/styles.css
+++ b/styles.css
@@ -174,14 +174,12 @@ a {
     }
 
     .hero img {
-      max-width: 800px;
+      max-width: 820px;
     }
 
     body {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-evenly;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
     }
 
     .more {
