--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,7 @@ button {
 button:hover {
   background: #1d22b9;
   opacity: 1;
+  transition: .2s ease-in-out;
 }
 
 .more {
@@ -158,6 +159,11 @@ a {
   color: rgb(255, 200, 0);
 }
 
+a:hover {
+  color: rgb(131, 103, 1);
+  transition: .2s ease-in-out;
+}
+
 @media only screen and (min-width: 1100px) {
   #media-player {
     max-width: 400px;
@@ -176,7 +182,7 @@ a {
     }
 
     .hero img {
-      max-width: 820px;
+      max-width: 100vh;
     }
 
     body {
@@ -197,5 +203,9 @@ a {
       font-size: 80px;
       right: 200px;
       text-align: start;
+    }
+
+    ul#episodes {
+      top: 35px;
     }
 }
