--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,64 @@
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+header {
+  background-color: #000000;
+}
+
+li {
+  list-style: none;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+.navbar {
+  min-height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 24px;
+}
+
+.nav-menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 60px;
+}
+
+.nav-branding {
+  font-size: 30px;
+}
+
+.nav-link {
+  transition: .4s ease;
+}
+
+.nav-link:hover {
+  color: #1d22b9;
+}
+
+.hamburger {
+  display: none;
+  cursor: pointer;
+}
+
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  background-color: white;
+}
+
 body {
   font-family: Arial, sans-serif;
   background-image: url(SleezyBackground.jpg);
@@ -81,7 +142,6 @@ body {
 .fa {
   padding: 20px;
   font-size: 30px;
-  width: 40px;
   text-align: center;
   text-decoration: none;
 }
@@ -154,14 +214,53 @@ button:hover {
   justify-content: center;
 }
 
-a {
+.more a {
   text-decoration: none;
   color: rgb(255, 200, 0);
 }
 
-a:hover {
+.more a:hover {
   color: rgb(131, 103, 1);
   transition: .2s ease-in-out;
+}
+
+@media (max-width:768px) {
+  .hamburger {
+    display: block;
+  }
+
+  .hamburger.active .bar:nth-child(2) {
+    opacity:0
+  }
+
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+
+  .nav-menu {
+    position: fixed;
+    left: -100%;
+    top: 70px;
+    gap: 0;
+    flex-direction: column;
+    background-color: #191414;
+    width: 100%;
+    text-align: center;
+    transition: .3s;
+  }
+
+  .nav-item {
+    margin: 16px 0;
+  }
+
+  .nav-menu.active {
+    left: 0;
+  }
+
 }
 
 @media only screen and (min-width: 1100px) {
