--- a/styles.css
+++ b/styles.css
@@ -4,10 +4,6 @@
   box-sizing: border-box;
 }
 
-header {
-  background-color: #000000;
-}
-
 li {
   list-style: none;
 }
@@ -59,6 +55,16 @@ a {
   background-color: white;
 }
 
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  background-color: #000000;
+}
+
+
 body {
   font-family: Arial, sans-serif;
   background-image: url(SleezyBackground.jpg);
@@ -68,6 +74,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
+  padding-top: 60px;
 }
 
 .hero {
