--- a/styles.css
+++ b/styles.css
@@ -179,13 +179,19 @@ h1 {
 }
 
 ul#episodes {
-  margin:  0 10px;
-  padding: 0;
+  padding: 20px;
   width: 200px;
 }
 
 ul#episodes > li {
   list-style-type: none;
+}
+
+.mediaContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 button {
@@ -284,13 +290,6 @@ button:hover {
 
   #media-player {
     max-width: 400px;
-  }
-
-  .mediaContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
   }
 
     #episodes {
