--- a/styles.css
+++ b/styles.css
@@ -278,10 +278,6 @@ button:hover {
 
 @media only screen and (min-width: 1100px) {
 
-  .hero {
-    position: fixed;
-    left: 0;
-  }
 
 .text-body {
   position: absolute;
@@ -298,7 +294,8 @@ button:hover {
     }
 
     .hero img {
-      max-width: 100vh;
+      object-fit: cover;
+      height: 100vh;
     }
 
     .body2 {
@@ -325,3 +322,39 @@ button:hover {
       top: 35px;
     }
 }
+
+@keyframes ani2 {
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes ani5 {
+  0% {
+    opacity: 0;
+  }
+  66% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes ani3 {
+  0%{
+    transform:translateY(50px);
+  }
+  100% {
+    transform:translateY(0);
+  }
+}  
+
+@keyframes ani4 {
+  0%{
+    transform:translateX(50px);
+  }
+  100% {
+    transform:translateX(0);
+  }
+}  
