--- a/contact.css
+++ b/contact.css
@@ -14,7 +14,7 @@
     margin: 0 10px;
     color: rgb(213, 213, 213);
     padding: 4px;
-    font-size: 10px;
+    font-size: 9px;
     gap: 20px;
   }
   
@@ -38,10 +38,10 @@
       text-align: center;
       margin: 10px;
   }
-  
+
   .contactContainer {
-    
-      }
+    height: 400px;
+  }
   
     .email {
         position: relative;
@@ -52,4 +52,13 @@
         .contacts {
             justify-content: center;
         }
+      }
+
+      .glass {
+        margin: 20px;
+        max-width: 95vw;
+      }
+
+      .links2 li {
+        font-size: 12px;
       }
