--- a/styles.css
+++ b/styles.css
@@ -235,6 +235,14 @@ button:hover {
   transition: .2s ease-in-out;
 }
 
+.copy {
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+}
+
 @media (max-width: 850px) {
   .hamburger {
     display: block;
