--- a/contact.css
+++ b/contact.css
@@ -18,47 +18,61 @@
     gap: 20px;
   }
 
+  
   .copy {
-    position: fixed;
-    bottom: 0;
-  }
-  
-  .Eric {
-    margin: 20px 0;
-    color: rgb(224, 224, 224);
+      position: fixed;
+      bottom: 0;
+    }
+    
+    .Eric {
+        margin: 20px 0;
+        color: rgb(224, 224, 224);
     font-size: 25px;
-  }
-  
-  .socials {
+}
+
+.socials {
     position: relative;
     top: 4px;
     right: 3px;
-  }
-  
-  .contacts {
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      text-align: center;
-      margin: 10px;
-  }
-  
-    .email {
-        position: relative;
-        top: 6.5px;
-      }
+}
 
-      @media only screen and (min-width: 1100px) {
+.contacts {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    margin: 10px;
+    max-height: 100vh;
+  }
+  
+  .email {
+      position: relative;
+      top: 6.5px;
+    }
+    
+
+    @media only screen and (max-width: 1099px) {
+        .glass {
+            padding-bottom: 50px;
+        }
+    }
+
+
+    @media only screen and (min-width: 1100px) {
         .contacts {
             justify-content: center;
-            height: 100vh;;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
         }
         .glass {
-          margin: 20px;
-          max-width: 90vw;
+          position: fixed;
+          right: 10px;
+            margin: 20px;
+            max-width: 90vw;
         }
-  
+
         .links2 li {
-          font-size: 12px;
+            font-size: 12px;
         }
       }
