--- a/contact.css
+++ b/contact.css
@@ -18,11 +18,6 @@
     gap: 20px;
   }
 
-  
-  .copy {
-      position: fixed;
-      bottom: 0;
-    }
     
     .Eric {
         margin: 20px 0;
@@ -75,4 +70,12 @@
         .links2 li {
             font-size: 12px;
         }
+
+        .copy {
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            right: 150px;
+          }
+
       }
