--- a/contact.css
+++ b/contact.css
@@ -14,7 +14,7 @@
     margin: 0 10px;
     color: rgb(213, 213, 213);
     padding: 4px;
-    font-size: 8px;
+    font-size: 15px;
     gap: 20px;
   }
 
@@ -48,8 +48,11 @@
 
     @media only screen and (max-width: 1099px) {
         .glass {
-            height: 200px;
+            height: 320px;
         }
+
+        ul {flex-direction: column;}
+
     }
 
 
