--- a/contact.css
+++ b/contact.css
@@ -18,7 +18,31 @@
     gap: 20px;
   }
 
-    
+  form {
+    background: white;
+    display: flex;
+    flex-direction: column;
+    padding: 2vw 4vw;
+    width: 90%;
+    max-width: 600px;
+    border-radius: 10px;
+  }  
+
+  form h3 {
+    color:  #555;
+    font-weight: 800;
+    margin-bottom: 20px;
+  }
+
+  form input, form textarea {
+    bottom: 0;
+    margin: 10px 0;
+    padding: 20px;
+    outline: none;
+    background: #f5f5f5;
+    font-size: 16px;
+  }
+
     .Eric {
         margin: 20px 0;
         color: rgb(224, 224, 224);
@@ -44,19 +68,46 @@
       position: relative;
       top: 6.5px;
     }
-    
 
+    .links2 li a {
+        color: yellow;
+    }
+
+    .links2 li a:hover {
+        opacity: .8;
+    }
+
+    .formContainer {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    
+    
+    
     @media only screen and (max-width: 1099px) {
         .glass {
             height: 320px;
         }
-
+        
         ul {flex-direction: column;}
-
+        
     }
-
-
+    
+    
     @media only screen and (min-width: 1100px) {
+        
+        .body3 {
+            display: flex;
+            flex-direction: column;
+            position: fixed;
+            right: 10px;
+        }
+       
         .contacts {
             justify-content: center;
             height: 100vh;
@@ -64,8 +115,6 @@
             flex-direction: column;
         }
         .glass {
-          position: fixed;
-          right: 10px;
             margin: 20px;
             max-width: 90vw;
         }
