--- a/contact.css
+++ b/contact.css
@@ -43,6 +43,18 @@
     font-size: 16px;
   }
 
+  form button {
+    padding: 15px;
+    background: #0a116e;
+    color: white;
+    font-size: 18px;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    width: 150px;
+    margin: 40px auto 0;
+  }
+
     .Eric {
         margin: 20px 0;
         color: rgb(224, 224, 224);
@@ -86,7 +98,9 @@
         flex-direction: column;
     }
 
-    
+    .glass {
+        margin: 20px;
+    }
     
     
     @media only screen and (max-width: 1099px) {
@@ -105,7 +119,7 @@
             display: flex;
             flex-direction: column;
             position: fixed;
-            right: 10px;
+            right: -5px;
         }
        
         .contacts {
