--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,10 @@ a {
   text-decoration: none;
 }
 
+.header {
+z-index: 1;
+}
+
 .navbar {
   min-height: 70px;
   display: flex;
@@ -56,7 +60,6 @@ a {
 }
 
 nav {
-  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -73,8 +76,7 @@ body {
   background-attachment: fixed;
   margin: 0;
   padding: 0;
-  height: 100vh;
-  padding-top: 60px;
+  overflow: hidden;
 }
 
 .hero {
@@ -85,11 +87,9 @@ body {
 .hero img {
   max-width: 100vw;
   box-shadow: 0 0 15px black;
-  opacity: 0.8;
 }
 
 .title {
-  margin: 30px 0;
   position: absolute;
   right: 20px;
   top: 0;
@@ -107,7 +107,6 @@ body {
   text-align: center;
   max-width: 100vw;
 }
-
 
 .about {
   margin: 20px;
@@ -129,7 +128,6 @@ body {
   box-shadow: 0 0 10px 10px rgba(0, 0, 0, .2); 
   border-radius: 10px;
   position: relative;
-  z-index: 1;
   background: inherit;
   overflow: hidden;
   max-width: 500px;
@@ -234,14 +232,18 @@ button:hover {
   color: rgb(131, 103, 1);
   transition: .2s ease-in-out;
 }
-
+.text-body {
+overflow-y: scroll;
+  padding: 10px;
+}
 .copy {
   color: #fff;
   padding: 20px;
   text-align: center;
 }
 
-@media (max-width: 1099px) {
+@media (max-width: 1399px) {
+
   .hamburger {
     display: block;
   }
@@ -282,13 +284,16 @@ button:hover {
 
 }
 
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-width: 1400px) {
 
 
-.text-body {
-  position: absolute;
-  right: 40px;
-}
+  .container {
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 60px 1fr 0px;
+  }
 
   #media-player {
     max-width: 400px;
@@ -299,14 +304,6 @@ button:hover {
       top: 27px;
     }
 
-    .hero {
-      position: fixed;
-      top: 70px;
-      left: 0;
-      width: 50%;
-      z-index: 1;
-    }
-    
 
     .hero img {
       object-fit: cover;
@@ -316,9 +313,8 @@ button:hover {
     .body2 {
       max-height: 100vh;
       overflow: hidden;
-      margin-left: 50%;
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr; 
     }
 
     .more {
@@ -339,6 +335,9 @@ button:hover {
     ul#episodes {
       top: 35px;
     }
+    
+
+
 }
 
 @keyframes ani2 {
