--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,8 @@ z-index: 1;
   justify-content: space-between;
   align-items: center;
   padding: 0 24px;
+  position: fixed;
+  z-index: 2;
 }
 
 .nav-menu {
@@ -76,7 +78,7 @@ body {
   background-attachment: fixed;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .hero {
@@ -129,9 +131,7 @@ body {
   border-radius: 10px;
   position: relative;
   background: inherit;
-  overflow: hidden;
   max-width: 500px;
-  max-height: 400px;
   opacity: 0.8;
   background-color: #000000;
 }
@@ -236,6 +236,7 @@ button:hover {
 overflow-y: scroll;
   padding: 10px;
 }
+
 .copy {
   color: #fff;
   padding: 20px;
