--- a/contact.css
+++ b/contact.css
@@ -120,8 +120,7 @@
         .body3 {
             display: flex;
             flex-direction: column;
-            position: fixed;
-            right: -5px;
+            align-items: center;
         }
        
         .contacts {
@@ -132,7 +131,7 @@
         }
         .glass {
             margin: 20px;
-            max-width: 90vw;
+            max-width: 600px;
         }
 
         .links2 li {
@@ -141,7 +140,6 @@
 
         .copy {
             text-align: center;
-            position: fixed;
             bottom: 0;
             right: 150px;
           }
