--- a/styles.css
+++ b/styles.css
@@ -104,9 +104,6 @@ body {
 
 #media-player {
   margin: 20px;
-  display: flex;
-  justify-content: center;
-  text-align: center;
   max-width: 100vw;
 }
 
@@ -116,6 +113,10 @@ body {
   color: rgb(192, 190, 231);
   text-shadow: 1px 1px #2320b1;
   text-align: center;
+}
+
+.infoContainer {
+  overflow: scroll;
 }
 
 .text {
@@ -212,8 +213,6 @@ button:hover {
 
 .more {
   color: white;
-  position: relative;
-  bottom: 30px;
   max-width: 400px;
   text-align: center;
 }
@@ -293,7 +292,7 @@ overflow-y: scroll;
     width: 100vw;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 60px 1fr 0px;
+    grid-template-rows: 60px 1fr 0;
   }
 
   #media-player {
@@ -301,7 +300,7 @@ overflow-y: scroll;
   }
 
     #episodes {
-      position: relative;
+      /* position: relative; */
       top: 27px;
     }
 
@@ -337,7 +336,9 @@ overflow-y: scroll;
       top: 35px;
     }
     
-
+    .bumper {
+      height: 100px;
+    }
 
 }
 
