--- a/contact.css
+++ b/contact.css
@@ -137,6 +137,7 @@
         }
 
         .ericStand {
+            display: block;
             position: absolute;
             left: 30px;
             height: 100vh;
@@ -145,6 +146,7 @@
         }
 
         .ericStand2 {
+            display: block;
             position: absolute;
             right: 30px;
             height: 100vh;
