--- a/contact.css
+++ b/contact.css
@@ -100,6 +100,12 @@
         flex-direction: column;
     }
 
+    .want {
+        font-size: 30px;
+        color: white;
+        padding: 20px; 
+    }
+
     .glass {
         margin: 20px;
     }
