--- a/contact.css
+++ b/contact.css
@@ -136,6 +136,11 @@
     
     @media only screen and (min-width: 1100px) {
         
+        .body4 {
+            display: grid;
+            grid-template-columns: 1fr 2fr 1fr;
+        }
+
         .body3 {
             display: flex;
             flex-direction: column;
@@ -144,19 +149,20 @@
 
         .ericStand {
             display: block;
-            position: absolute;
-            left: 30px;
-            height: 100vh;
-            top: 90px;
             transform: scaleX(-1);
+            height: 100vh;
+            justify-self: center;
         }
 
         .ericStand2 {
             display: block;
-            position: absolute;
-            right: 30px;
             height: 100vh;
-            top: 90px;
+            justify-self: center;
+        }
+
+        .body4 {
+            display: grid;
+            grid-template-columns: 1fr 2fr 1fr;
         }
        
         .contacts {
