--- a/listen.css
+++ b/listen.css
@@ -1,7 +1,6 @@
 #episodes {
     overflow-y: scroll;
     height: 200px;
-    background-color: rgb(52, 117, 163);
     transition: background-color .3s ease-in-out; 
     padding: 10px;
   }
@@ -11,6 +10,24 @@
     width: 100%;
   }
 
+  #episode-description {
+    color: white;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+}
+
+.logo img {
+    max-height: 80vh;
+    max-width: 90vw;
+    object-fit: cover;
+
+}
+
+    .glass {
+        display: none;
+    }
+
   @media only screen and (min-width: 1100px) {
 
     #episodes {
@@ -19,5 +36,13 @@
 
     .mediaContainer {
         top: 100px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+
+    .logoContainer {
+        display: flex;
+        justify-content: center;
     }
   }
