--- a/contact.css
+++ b/contact.css
@@ -60,7 +60,7 @@
     .Eric {
         margin: 20px 0;
         color: rgb(224, 224, 224);
-    font-size: 25px;
+        font-size: 25px;
 }
 
 .socials {
@@ -123,18 +123,15 @@
         flex-direction: column;
         align-items: center;
     }
+        
+    ul {flex-direction: column;}
+        
     
-    @media only screen and (max-width: 1099px) {
-        .glass {
-            height: 320px;
-        }
-        
-        ul {flex-direction: column;}
-        
-    }
     
     
     @media only screen and (min-width: 1100px) {
+        
+        ul {flex-direction: row;}
         
         .body4 {
             display: grid;
