--- a/partners.css
+++ b/partners.css
@@ -1,6 +1,7 @@
 .partners img {
     max-width: 350px;
-    padding: 20px;
+    margin: 20px;
+    box-shadow: 5px 5px 10px black;
 }
 
 .partners { display: flex;
